# 3d-scanner

./: .gitignore  CMakeLists.txt  README.md
source/: ExtractContours.cpp  ExtractContours.h  main.cpp
